kubernetes/cilium-egress-whitelist/entity-wide-allow/manifests/clusterwide-allow-cluster-entity.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-intra-cluster-egress
spec:
  endpointSelector: {}
  egress:
  - toEntities:
    - cluster
    - kube-apiserver
